<resources>
    <string name="app_name">Premier League Fixtures</string>
    <string name="second_fragment">ТЕКСТ ВНУТРИ ФРАГМЕНТА 2</string>
    <string name="next_layout_button">SHOW DETAILS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_number">Match Number</string>
    <string name="round_number">Round Number</string>
    <string name="date_utc">Date UTC</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="group">Group</string>
    <string name="home_team_score">Home Team Score</string>
    <string name="away_team_score">Away Team Score</string>
    <string name="match_list">MATCH LIST</string>
</resources>