<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailScreenFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/MatchNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MatchNumberTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/match_number"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/match_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/RoundNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/RoundNumberTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/round_number"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/round_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/DateUtcLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DateUtcTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_utc"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/date_utc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LocationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LocationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Location"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/HomeTeamLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HomeTeamTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_team"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/home_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AwayTeamLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AwayTeamTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/away_team"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/away_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/GroupLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/GroupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/group"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/HomeTeamScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HomeTeamScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_team_score"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/home_team_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AwayTeamScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AwayTeamScoreTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/away_team_score"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/away_team_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="24sp"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>